fix(DataMapper): Invert DataMapper icon colors in dark mode

--- a/packages/ui/src/multiplying-architecture/KaotoEditor.scss
+++ b/packages/ui/src/multiplying-architecture/KaotoEditor.scss
@@ -19,6 +19,10 @@ html body {
   }
 }
 
+.pf-v6-theme-dark img[alt='Kaoto DataMapper icon'] {
+  filter: invert(1);
+}
+
 .shell {
   height: 100vh;
   width: 100vw;
